<resources>
    <string name="app_name">Speak2Me</string>
    <string name="enter_text">Please press and speak.</string>
    <string name="action_settings">Settings</string>
    <string name="encrypt">Encrypt message?</string>
    <string name="default_text">Recorded text…</string>
    <string name="default2">Translated to…</string>
    <string name="view_logs">View Logs</string>
    <string name="send">Send</string>
    <string name="delete">Delete Log</string>
    <string name="detected">Language detected:</string>
    <string name="translate">Translate to:</string>
    <string-array name="languages">
        <item>Afrikaans</item>
        <item>Basque</item>
        <item>Bulgarian</item>
        <item>Catalan</item>
        <item>Arabic (Egypt)</item>
        <item>Arabic (Jordan)</item>
        <item>Arabic (Kuwait)</item>
        <item>Arabic (Lebanon)</item>
        <item>Arabic (Qatar)</item>
        <item>Arabic (UAE)</item>
        <item>Arabic (Morocco)</item>
        <item>Arabic (Iraq)</item>
        <item>Arabic (Algeria)</item>
        <item>Arabic (Bahrain)</item>
        <item>Arabic (Lybia)</item>
        <item>Arabic (Oman)</item>
        <item>Arabic (Saudi Arabia)</item>
        <item>Arabic (Tunisia)</item>
        <item>Arabic (Yemen)</item>
        <item>Czech</item>
        <item>Dutch</item>
        <item>English (Australia)</item>
        <item>English (Canada)</item>
        <item>English (India)</item>
        <item>English (New Zealand)</item>
        <item>English (South Africa)</item>
        <item>English (UK)</item>
        <item>English (US)</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Galician</item>
        <item>German</item>
        <item>Hebrew</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Italian</item>
        <item>Indonesian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Latin</item>
        <item>Mandarin Chinese</item>
        <item>Traditional Taiwan</item>
        <item>Simplified China</item>
        <item>Simplified Hong Kong</item>
        <item>Yue Chinese (Traditional Hong Kong)</item>
        <item>Malaysian</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Pig Latin</item>
        <item>Portuguese</item>
        <item>Portuguese (Brasil)</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Serbian</item>
        <item>Slovak</item>
        <item>Spanish (Argentina)</item>
        <item>Spanish (Bolivia)</item>
        <item>Spanish (Chile)</item>
        <item>Spanish (Colombia)</item>
        <item>Spanish (Costa Rica)</item>
        <item>Spanish (Dominican Republic)</item>
        <item>Spanish (Ecuador)</item>
        <item>Spanish (El Salvador)</item>
        <item>Spanish (Guatemala)</item>
        <item>Spanish (Honduras)</item>
        <item>Spanish (Mexico)</item>
        <item>Spanish (Nicaragua)</item>
        <item>Spanish (Panama)</item>
        <item>Spanish (Paraguay)</item>
        <item>Spanish (Peru)</item>
        <item>Spanish (Puerto Rico)</item>
        <item>Spanish (Spain)</item>
        <item>Spanish (US)</item>
        <item>Spanish (Uruguay)</item>
        <item>Spanish (Venezuela)</item>
        <item>Swedish</item>
        <item>Turkish</item>
        <item>Zulu</item>
    </string-array>
    <string-array name="nLanguages">
        <item>Arabic</item>
        <item>Bulgarian</item>
        <item>Catalan</item>
        <item>Chinese Simplified</item>
        <item>Chinese Traditional</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Estonian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Haitian Creole</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hmong Daw</item>
        <item>Hungarian</item>
        <item>Indonesian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Malay</item>
        <item>Norwegian</item>
        <item>Persian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Vietnamese</item>
    </string-array>
</resources>
